Reactify Bet1 Conversion Bug Squash (#3375)
* fix

* Fix contract deletion

* modal height fix

* state fixes for CAF

* edit bug fix

* delete fix

* fix for refresh contracts

* Unified update

---------

--- a/packages/commonwealth/client/styles/modals/manage_contract_template_modal.scss
+++ b/packages/commonwealth/client/styles/modals/manage_contract_template_modal.scss
@@ -3,6 +3,9 @@
 .ManageContractTemplateModal {
   width: 720px;
   padding: 24px;
+  height: 95vh;
+  max-height: 820px;
+  overflow-y: auto;
 
   @include smallInclusive {
     width: auto;
